# fredipy

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml
.github/workflows/: pypi-release.yml  python-package.yml
examples/: basic_breit_wigner.ipynb  gaussian_mixture_model.ipynb
fredipy/: __init__.py  constraints.py  covariance.py  integrators.py  kernel_construction.py  kernels.py  models.py  operators.py  util.py
tests/: test_data_input.py  test_integrators.py  test_kernels.py  test_reconstruction.py  test_util.py
